WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30355
[Qt] Windowless Plugins : <input> cursor blinks even after transferring focus to plugin
https://bugs.webkit.org/show_bug.cgi?id=30355
Summary
[Qt] Windowless Plugins : <input> cursor blinks even after transferring focus...
Girish Ramakrishnan
Reported
2009-10-14 04:41:01 PDT
When the focus is transfered from an input element to plugin/flash in windowless mode, the cursor of the input box still blinks. Note that the focus does get transferred, keystrokes are sent to the plugin. <html> <body> <input/> <embed src="frog.swf" width="550" height="400" wmode="transparent"> </embed> </body> </html>
Attachments
Work so far
(4.96 KB, patch)
2009-10-16 06:24 PDT
,
Girish Ramakrishnan
no flags
Details
Formatted Diff
Diff
Patch
(6.98 KB, patch)
2011-06-23 14:41 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-02
(1.28 MB, application/zip)
2011-06-23 15:01 PDT
,
WebKit Review Bot
no flags
Details
Patch
(7.06 KB, patch)
2011-06-24 12:27 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(1.25 MB, application/zip)
2011-06-24 14:47 PDT
,
WebKit Review Bot
no flags
Details
Patch
(7.93 KB, patch)
2011-06-25 03:22 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-01
(1.25 MB, application/zip)
2011-06-25 03:47 PDT
,
WebKit Review Bot
no flags
Details
Patch
(9.12 KB, patch)
2011-06-25 10:31 PDT
,
Robert Hogan
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Girish Ramakrishnan
Comment 1
2009-10-16 06:24:22 PDT
Created
attachment 41283
[details]
Work so far Identifies one of the problems. The test works. But there is still a bad pointer somewhere (qgvlauncher still crashes).
Girish Ramakrishnan
Comment 2
2009-10-16 06:25:32 PDT
Please(In reply to
comment #1
)
> Created an attachment (id=41283) [details] > Work so far > > Identifies one of the problems. The test works. But there is still a bad > pointer somewhere (qgvlauncher still crashes).
Err, ignore the patch. It was meant for 30354.
Antonio Gomes
Comment 3
2009-10-16 08:26:28 PDT
(In reply to
comment #2
)
> Please(In reply to
comment #1
) > > Created an attachment (id=41283) [details] [details] > > Work so far > > > > Identifies one of the problems. The test works. But there is still a bad > > pointer somewhere (qgvlauncher still crashes). > > Err, ignore the patch. It was meant for 30354.
+void tst_QWebView::deletePageAfterView_data() +{ + QDir resourceDir(QDir::fromNativeSeparators(SRCDIR) + "../resources/"); + resourceDir.makeAbsolute(); + const QString flashPath = resourceDir.absoluteFilePath("test.swf"); + const QString flashUrl = QString("file://%1").arg(flashPath); girish, see trick used in patch for referencing a "resource" dir:
https://bug-29248-attachments.webkit.org/attachment.cgi?id=40115
ihmo , it is cleaner
Kenneth Rohde Christiansen
Comment 4
2009-10-18 08:55:44 PDT
We had the exact same problem (blinking cursor) for windowed plugins, as I remember fixing that :-) Maybe you can find the fix that I did back then.
Girish Ramakrishnan
Comment 5
2009-10-27 00:59:14 PDT
Changing platform to 'All'. Reproducible on Linux and Mac (Qt 4.6 git as of today)
Robert Hogan
Comment 6
2011-06-23 14:41:53 PDT
Created
attachment 98408
[details]
Patch
Robert Hogan
Comment 7
2011-06-23 14:45:08 PDT
Hi Simon, You OK with this?
http://trac.webkit.org/changeset/42748
introduced the function - I think Qt and Gtk are its only users.
WebKit Review Bot
Comment 8
2011-06-23 15:01:32 PDT
Comment on
attachment 98408
[details]
Patch
Attachment 98408
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8934232
WebKit Review Bot
Comment 9
2011-06-23 15:01:37 PDT
Created
attachment 98413
[details]
Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Early Warning System Bot
Comment 10
2011-06-23 15:06:53 PDT
Comment on
attachment 98408
[details]
Patch
Attachment 98408
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/8934237
WebKit Review Bot
Comment 11
2011-06-23 15:44:46 PDT
Comment on
attachment 98408
[details]
Patch
Attachment 98408
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/8936201
Simon Hausmann
Comment 12
2011-06-24 05:05:53 PDT
Comment on
attachment 98408
[details]
Patch Looks good in principle, but the bots show that there are build issues with WebKit2 and missing expected results for the other platforms. Landing the patch would cause build issues and bot-redness -> r-
Robert Hogan
Comment 13
2011-06-24 12:27:28 PDT
Created
attachment 98523
[details]
Patch
WebKit Review Bot
Comment 14
2011-06-24 12:35:07 PDT
Comment on
attachment 98523
[details]
Patch
Attachment 98523
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/8939457
WebKit Review Bot
Comment 15
2011-06-24 14:47:46 PDT
Comment on
attachment 98523
[details]
Patch
Attachment 98523
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8931671
WebKit Review Bot
Comment 16
2011-06-24 14:47:53 PDT
Created
attachment 98544
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Robert Hogan
Comment 17
2011-06-25 03:22:32 PDT
Created
attachment 98586
[details]
Patch
WebKit Review Bot
Comment 18
2011-06-25 03:47:34 PDT
Comment on
attachment 98586
[details]
Patch
Attachment 98586
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8936721
WebKit Review Bot
Comment 19
2011-06-25 03:47:40 PDT
Created
attachment 98587
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Robert Hogan
Comment 20
2011-06-25 10:31:10 PDT
Created
attachment 98594
[details]
Patch
Simon Hausmann
Comment 21
2011-06-27 01:25:52 PDT
Comment on
attachment 98594
[details]
Patch r=me. This needs to be landed manually as I'm sure mac results will be needed right after that.
Robert Hogan
Comment 22
2011-07-03 08:05:04 PDT
Committed
r90338
: <
http://trac.webkit.org/changeset/90338
>
Robert Hogan
Comment 23
2011-07-03 08:51:59 PDT
Committed
r90339
: <
http://trac.webkit.org/changeset/90339
>
Ademar Reis
Comment 24
2011-07-13 10:25:34 PDT
Revision
r90338
cherry-picked into qtwebkit-2.2 with commit bf3faac <
http://gitorious.org/webkit/qtwebkit/commit/bf3faac
> Revision
r90339
cherry-picked into qtwebkit-2.2 with commit 4817c3f <
http://gitorious.org/webkit/qtwebkit/commit/4817c3f
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug